presentation avec texte du site

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -445,7 +445,7 @@
             <section class="engagement-slide" data-background-image="https://www.ville-lehaillan.fr/app/uploads/2024/05/Image_Ville-30-scaled.jpg">
                 <div>
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
-                        <strong>Soutenir la mise en place d'une<br> Métropole à 30km/h</strong>
+                        <strong>Soutenir la mise en place et la communication pour une métropole à 30 km/h</strong>
                     </div>
                 </div>
             </section>
@@ -470,8 +470,7 @@
             <section class="engagement-slide" data-background-image="chantier-bordeaux.jpg">
                 <div class="fragment">
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
-                        <strong>Créer une charte de chantier pour prendre en compte cyclistes et piéton·nes lors des
-                            travaux</strong>
+                        <strong>Créer et mettre en place une charte de chantier pour prendre en compte les cyclistes et les piéton⋅nes lors des travaux de <voirie></voirie></strong>
                     </div>
                 </div>
             </section>
@@ -752,7 +751,7 @@
             <section class="engagement-slide" data-background-image="emportierage.jpg" data-background-size="1400px">
                 <div class="fragment">
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
-                        <strong>Créer une zone tampon pour éviter le risque d'emportiérage</strong>
+                        <strong>Créer une zone tampon pour mettre à distance du stationnement les bandes/pistes cyclables pour éviter le risque d'emportiérage</strong>
                     </div>
                 </div>
             </section>
