ajout page maison des livreurs et du collectif

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -315,7 +315,7 @@
             </section>
 
             <section>
-                <h2>2026 : une coconstruction</h2>
+                <h2>2026 : une co-construction</h2>
                 <ul>
                     <li>Cycles & Manivelles</li>
                     <li>Etu'Recup</li>
