fix presentation (Etu'Recup soutien + balise voirie involontaire)

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -318,11 +318,10 @@
                 <h2>2026 : une co-construction</h2>
                 <ul>
                     <li>Cycles & Manivelles</li>
-                    <li>Etu'Recup</li>
                     <li>La Maison des Livreurs</li>
                     <li>Les Vélotaffeurs Tressois</li>
                     <li>Vélo-Cité</li>
-                    <li>Soutien des autres MAMMA (Léon à Vélo, Le Garage Moderne, Recyclerie Sportive)</li>
+                    <li>Soutien des autres MAMMA (Etu'Recup, Léon à Vélo, Le Garage Moderne, Recyclerie Sportive)</li>
                 </ul>
             </section>
             <section>
@@ -470,7 +469,7 @@
             <section class="engagement-slide" data-background-image="chantier-bordeaux.jpg">
                 <div class="fragment">
                     <div class="engagement" style="font-size: 1.3em; padding: 40px;">
-                        <strong>Créer et mettre en place une charte de chantier pour prendre en compte les cyclistes et les piéton⋅nes lors des travaux de <voirie></voirie></strong>
+                        <strong>Créer et mettre en place une charte de chantier pour prendre en compte les cyclistes et les piéton⋅nes lors des travaux de voirie</strong>
                     </div>
                 </div>
             </section>
