fix proposition offre stationnement

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -291,8 +291,7 @@
                 <h2>Introduction</h2>
                 <h3>2026 - 2032</h3>
 
-                <p style="font-size: 1.2em; margin: 40px 0;">La mobilité est un enjeu fondamental pour la métropole et
-                    pour le bien-être des personnes qui y habitent, y travaillent et s'y déplacent.</p>
+                <p style="font-size: 1.2em; margin: 40px 0;">La mobilité est un enjeu fondamental pour la métropole des personnes qui y habitent, y travaillent et s'y déplacent.</p>
             </section>
 
             <section>
@@ -677,7 +676,7 @@
 
             <section class="engagement-slide" data-background-image="metstation.png" data-background-size="1400px">
                 <div class="engagement" style="font-size: 1.3em; padding: 40px;">
-                    <strong>Proposer une offre simplifiée, unique et sans abonnement permettant l’accès à l’ensemble des Metstations</strong>
+                    <strong>Proposer une offre simplifiée, unique et sans abonnement permettant l’accès à l’ensemble du stationnement</strong><br>(Metstations, gares, bicycletteries)
                 </div>
             </section>
 
