fix presentation : pour dans l'intro

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -291,7 +291,7 @@
                 <h2>Introduction</h2>
                 <h3>2026 - 2032</h3>
 
-                <p style="font-size: 1.2em; margin: 40px 0;">La mobilité est un enjeu fondamental pour la métropole des personnes qui y habitent, y travaillent et s'y déplacent.</p>
+                <p style="font-size: 1.2em; margin: 40px 0;">La mobilité est un enjeu fondamental pour la métropole, pour les personnes qui y habitent, y travaillent et s'y déplacent.</p>
             </section>
 
             <section>
